data/derived/comb/progs/unify/prog5183.ml.out
Characters 31-49:
  let stringOfList f l = List.map(sepConcat, (f,l));;
                                 ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'd
